@@ -21,7 +21,6 @@ import java.util.stream.Collectors;
 import java.util.Map;
 import java.util.HashMap;
 
-import com.google.common.collect.ImmutableMap;
 import net.minidev.json.JSONObject;
 import org.apache.commons.lang3.StringUtils;
 import org.folio.processor.error.ErrorCode;
@@ -213,7 +212,7 @@ class RuleProcessorTest {
     RecordWriter writer = new JsonRecordWriter();
 
     // when & then
-    ErrorHandler errorHandler = (translationException) -> {
+    ErrorHandler errorHandler = translationException -> {
       assertEquals("4bbec474-ba4d-4404-990f-afe2fc86dd3d", translationException.getRecordInfo().getId());
       assertEquals(RecordType.INSTANCE, translationException.getRecordInfo().getType());
       assertEquals(ParseException.class, translationException.getCause().getClass());
@@ -241,7 +240,7 @@ class RuleProcessorTest {
     dataSource.setFrom("$.instance.title");
     rule.setDataSources(singletonList(dataSource));
     entity = readFileContentFromResources("processor/given_entity.json");
-    when(translationHolder.lookup("set_value")).thenReturn((value, currentIndex, translation1, referenceData, metadata) -> {
+    when(translationHolder.lookup("set_value")).thenReturn((value, currentIndex, translation1, referenceDataWrapper, metadata) -> {
       throw new RuntimeException("test exception");
     });
     RuleProcessor ruleProcessor = new RuleProcessor(translationHolder);
@@ -249,7 +248,7 @@ class RuleProcessorTest {
     RecordWriter writer = new JsonRecordWriter();
 
     // when & then
-    ErrorHandler errorHandler = (translationException) -> {
+    ErrorHandler errorHandler = translationException -> {
       assertEquals("4bbec474-ba4d-4404-990f-afe2fc86dd3d", translationException.getRecordInfo().getId());
       assertEquals(RecordType.INSTANCE, translationException.getRecordInfo().getType());
       assertEquals("title", translationException.getRecordInfo().getFieldName());
@@ -272,7 +271,7 @@ class RuleProcessorTest {
     dataSource.setFrom("$.holdings[*].callNumber");
     rule.setDataSources(singletonList(dataSource));
     entity = readFileContentFromResources("processor/given_entity_one_holding_one_item.json");
-    when(translationHolder.lookup("set_call_number_type_id")).thenReturn((value, currentIndex, translation1, referenceData, metadata) -> {
+    when(translationHolder.lookup("set_call_number_type_id")).thenReturn((value, currentIndex, translation1, referenceDataWrapper, metadata) -> {
       throw new RuntimeException("test exception");
     });
     RuleProcessor ruleProcessor = new RuleProcessor(translationHolder);
@@ -280,7 +279,7 @@ class RuleProcessorTest {
     RecordWriter writer = new JsonRecordWriter();
 
     // when & then
-    ErrorHandler errorHandler = (translationException) -> {
+    ErrorHandler errorHandler = translationException -> {
       assertEquals("holding1 Id", translationException.getRecordInfo().getId());
       assertEquals(RecordType.HOLDING, translationException.getRecordInfo().getType());
       assertEquals("callNumber", translationException.getRecordInfo().getFieldName());
@@ -311,7 +310,7 @@ class RuleProcessorTest {
     RecordWriter writer = new JsonRecordWriter();
 
     // when & then
-    ErrorHandler errorHandler = (translationException) -> {
+    ErrorHandler errorHandler = translationException -> {
       assertEquals("item12 Id", translationException.getRecordInfo().getId());
       assertEquals(RecordType.ITEM, translationException.getRecordInfo().getType());
       assertEquals("barcode", translationException.getRecordInfo().getFieldName());
@@ -380,7 +379,7 @@ class RuleProcessorTest {
   @Test
   void shouldMapMultipleHoldingsWithMultipleHoldingsStatementsProperly() {
     when(translationHolder.lookup("set_value"))
-      .thenReturn((value, currentIndex, translation1, referenceData, metadata) ->
+      .thenReturn((value, currentIndex, translation1, referenceDataWrapper, metadata) ->
         value.equals("d9cd0bed-1b49-4b5e-a7bd-064b8d177231") ? "location 1" : "location 2");
     // given
     Rule givenRule = new Rule();
@@ -482,7 +481,7 @@ class RuleProcessorTest {
     AtomicInteger times = new AtomicInteger();
 
     // when & then
-    ErrorHandler errorHandler = (translationException) -> {
+    ErrorHandler errorHandler = translationException -> {
       assertEquals(1, times.incrementAndGet());
     };
 
@@ -499,19 +498,19 @@ class RuleProcessorTest {
     AtomicInteger times = new AtomicInteger();
 
     Translation translation = new Translation();
-    translation.setParameters(ImmutableMap.of(
+    translation.setParameters(Map.of(
       "relatedIdentifierTypes", "ISBN",
       "type", "Invalid ISBN"));
     translation.setFunction("set_related_identifier");
 
     List<Rule> compositeRules = Arrays.asList(MAPPER.readValue(readFileContentFromResources("processor/test_rules.json"),
-      Rule[].class)).stream().filter(rule -> rule.getField().equals("003")).collect(Collectors.toList());
+      Rule[].class)).stream().filter(rule -> rule.getField().equals("003")).toList();
 
     // Enrich with translation for composite rule values.
     compositeRules.forEach(r -> r.getDataSources().forEach(ds -> ds.setTranslation(translation)));
 
     // when & then
-    ErrorHandler errorHandler = (translationException) -> {
+    ErrorHandler errorHandler = translationException -> {
       assertEquals(1, times.incrementAndGet());
     };
 
